Fix T90017: Bone widget drawing inconsistent with editing

The `lines_loose` extractor did not trigger loose geometry caching.