source/blender/draw/intern/draw_cache_extract.h
@@ -81,9 +81,10 @@ typedef enum eMRDataType {
   MR_DATA_POLY_NOR = 1 << 1,
   MR_DATA_LOOP_NOR = 1 << 2,
   MR_DATA_LOOPTRI = 1 << 3,
+  MR_DATA_LOOSE_GEOM = 1 << 4,
   /** Force loop normals calculation. */
-  MR_DATA_TAN_LOOP_NOR = 1 << 4,
-  MR_DATA_MAT_OFFSETS = 1 << 5,
+  MR_DATA_TAN_LOOP_NOR = 1 << 5,
+  MR_DATA_MAT_OFFSETS = 1 << 6,
 } eMRDataType;
 ENUM_OPERATORS(eMRDataType, MR_DATA_MAT_OFFSETS)
 
